# rs-Amberlock

./: .gitignore  Cargo.toml  README.md
amberlock-auth/: Cargo.toml
amberlock-auth/src/: lib.rs
amberlock-auth/tests/: integration.rs
amberlock-core/: Cargo.toml
amberlock-core/examples/: basic_usage.rs
amberlock-core/src/: checkpoint.rs  errors.rs  inspect.rs  lib.rs  ops.rs  privileged.rs  progress.rs  recursive.rs  rollback.rs
amberlock-core/tests/: integration.rs
amberlock-fixtures/: Cargo.toml
amberlock-fixtures/src/: lib.rs
amberlock-gui/: Cargo.toml
amberlock-gui/src/: bridge.rs  dialogs.rs  lib.rs  main.rs  model.rs  privileged.rs  utils.rs  vault.rs
amberlock-gui/tests/: integration.rs
amberlock-gui/ui/: main.slint
amberlock-storage/: Cargo.toml
amberlock-storage/src/: lib.rs  query.rs
amberlock-types/: Cargo.toml
amberlock-types/src/: lib.rs
amberlock-winsec/: Cargo.toml
amberlock-winsec/src/: error.rs  impersonate.rs  lib.rs  sddl.rs  setlabel.rs  token.rs  treeops.rs
amberlock-winsec/tests/: integration.rs
docs/: Products.md  amberlock-auth.md  amberlock-core.md  amberlock-storage.md  amberlock-vault.md  amberlock-winsec.md  build.md  user_docs.md
