[workspace]
members = [
    "amberlock-winsec",
    "amberlock-core",
    "amberlock-auth",
    "amberlock-storage",
    "amberlock-gui",
    "amberlock-fixtures",
    "amberlock-types",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["Zelas2Xerath"]

[workspace.dependencies]
dirs = "6.0.0"
anyhow = "1.0.100"
thiserror = "2.0.17"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
uuid = { version = "1.19.0", features = ["v4"] }
once_cell = "1.21.3"
bitflags = { version = "2.10.0", features = ["serde"] }
rayon = "1.11.0"
walkdir = "2.5.0"
time = { version = "0.3.44", features = ["formatting", "parsing"] }
argonautica = { version = "0.2.0" } # 如选用；下文采用 argon2 crate
argon2 = { version = "0.6.0-rc.2", default-features = true, features = ["getrandom"] }
rand = "0.10.0-rc.5"
proptest = "1.9.0"
quickcheck = "1.0.3"
# DPAPI & Win32
windows = { version = "0.62.2", features = [
    # 核心功能
    "Win32_Foundation",

    # 安全相关（最重要）
    "Win32_Security",
    "Win32_Security_Authentication_Identity",
    "Win32_Security_Authorization",
    "Win32_Security_Cryptography",

    # 系统服务
    "Win32_System_Memory",
    "Win32_System_Threading",
    "Win32_System_Com",
    "Win32_System_SystemServices",
    "Win32_System_WindowsProgramming",

    # 存储
    "Win32_Storage_FileSystem",

    # UI（用于 Shell 集成，可选）
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }
# GUI
slint = { version = "1.14.1", features = ["backend-winit", "renderer-femtovg"] }
rfd = "0.16.0" # 轻量文件选择对话框
parking_lot = "0.12.5"
# Tests
tempfile = "3.23.0"
prop-test = "0.1.1"

[profile.release]
lto = "fat"
debug = false
opt-level = 3
