[package]
name = "amberlock-core"
version = "0.1.0"
edition = "2024"

[dependencies]
uuid.workspace = true
time.workspace = true
amberlock-winsec = { path = "../amberlock-winsec" }
amberlock-auth = { path = "../amberlock-auth" }
amberlock-storage = { path = "../amberlock-storage" }
amberlock-types = { path = "../amberlock-types" }

[dev-dependencies]