[package]
name = "amberlock-gui"
version = "0.1.0"
edition = "2024"

[build-dependencies]
slint-build = "1.14.1"

[dependencies]
dirs.workspace = true
once_cell.workspace = true
slint.workspace = true
anyhow.workspace = true
serde_json.workspace = true
rfd.workspace = true
amberlock-core = { path = "../amberlock-core" }
amberlock-storage = { path = "../amberlock-storage" }
amberlock-types = { path = "../amberlock-types" }
amberlock-winsec = { path = "../amberlock-winsec" }

[features]
default = []

# 开发模式特性：启用额外的调试信息和日志
dev = []