[package]
name = "amberlock-winsec"
version = "0.1.0"
edition = "2024"

[dependencies]
tempfile.workspace = true
thiserror.workspace = true
windows.workspace = true
serde.workspace = true
bitflags.workspace = true
rayon.workspace = true
walkdir.workspace = true
amberlock-types = { path = "../amberlock-types" }